--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.description }}">
+    <!-- Tema del Jekyll -->
     <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
+    <!-- MathJax para fórmulas en LaTeX -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
-    <!-- Additional head elements here -->
 </head>
 <body>
-    <!-- Page content -->
+    <!-- Contenido de la página -->
     {{ content }}
 </body>
 </html>
