--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
       figure {
           margin-left: auto;
           margin-right: auto;
+          margin-top: 20px; /* Space above the figure */
+          margin-bottom: 20px; /* Space below the figure */
           text-align: center; /* Center-align the figure and caption */
       }
       figcaption {
