--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,8 @@
           text-align: center; /* Center-align the figure and caption */
       }
       figcaption {
+          caption-side: bottom; /* Optional: places the caption at the bottom */
           font-weight: bold; /* Bold the caption text */
-          margin-top: 40px; /* Space above the figure */
-          margin-bottom: 10px; /* Space below the figure */
           padding-top: 8px; /* Optional: spacing between figure and caption */
       }
     </style>
@@ -21,10 +20,13 @@
       table {
           margin-left: auto;
           margin-right: auto;
+          margin-top: 40px; /* Space above the table */
+          margin-bottom: 10px; /* Space below the table */
+          text-align: center; /* Center-align the table and caption */
           border-collapse: collapse; /* Optional for better border styling */
       }
       tablecaption {
-          caption-side: bottom; /* Optional: places the caption at the bottom */
+          caption-side: top; /* Optional: places the caption at the bottom */
           font-weight: bold; /* Bold the caption text */
           padding-top: 8px; /* Optional: spacing between table and caption */
       }
