--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,10 @@
       }
     </style>
     <style>
+      .table-container {
+          text-align: center; /* Center the table within the container */
+          margin-top: 20px; /* Optional: space above the container */
+      }
       table {
           margin-left: auto;
           margin-right: auto;
