--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <style>
+      .figure-container {
+          text-align: center; /* Center the figure within the container */
+          margin-top: 40px; /* Optional: space above the container */
+          margin-bottom: 20px; /* Optional: space below the container */
+      }
       figure {
           margin-left: auto;
           margin-right: auto;
-          margin-top: 40px; /* Space above the figure */
-          margin-bottom: 20px; /* Space below the figure */
           text-align: center; /* Center-align the figure and caption */
       }
       figcaption {
@@ -19,13 +22,12 @@
     <style>
       .table-container {
           text-align: center; /* Center the table within the container */
-          margin-top: 20px; /* Optional: space above the container */
+          margin-top: 40px; /* Optional: space above the container */
+          margin-bottom: 20px; /* Optional: space below the container */
       }
       table {
           margin-left: auto;
           margin-right: auto;
-          margin-top: 40px; /* Space above the table */
-          margin-bottom: 20px; /* Space below the table */
           border-collapse: collapse; /* Optional for better border styling */
       }
       tablecaption {
