--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
           margin-bottom: 20px; /* Optional: space below the container */
       }
       figure {
-          margin-left: auto;
-          margin-right: auto;
+          <!--margin-left: auto; -->
+          <!--margin-right: auto; -->
           text-align: center; /* Center-align the figure and caption */
       }
       figcaption {
